create a new dashboard

--- a/app/resources/system_admin_dashboard.html
+++ b/app/resources/system_admin_dashboard.html
@@ -15,12 +15,12 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-6 col-sm-6 col-xs-12">
+        <div class="col-md-12 col-sm-12 col-xs-12">
             {$chart1}
         </div>
-        <div class="col-md-6 col-sm-6 col-xs-12">
+        <!-- <div class="col-md-6 col-sm-6 col-xs-12">
             {$chart2}
-        </div>
+        </div> -->
     </div>
 </div>
 <!--[/main]-->
